﻿v9.2
-----
+ Added a confirmation dialog when emptying your shopping cart
+ Add to Cart buttons will now display on larger wishlists
+ Added a "View badge progress" button to booster packs in inventory and on trading cards in market
: Fixed a bug that caused other users inventory to not load price information under some circumstances
: Updated age gate bypass to work with additional new age gate types
: Fixed Steam store main menu dropdowns not being hidden on mouse out
: Improved performance on store pages for users with large purchase histories
: Fixed a bug in custom holiday profile themes that effected legitimate users of that theme


v9.1.1
-----
: Updated the advanced inventory controls to work with the new layout, they are now enabled by default
: Fixed a bug where site icons would display incorrectly on profiles if the display style was set to none
: Fixed a bug that would sometimes cause quick sell functions to sell items for the wrong amount
: Fixed a bug that could cause some game's workshop item list not to load correctly

v9.1
-----
+ Added DRM detection for games utilizing Denuvo Antitamper DRM
+ Added home page customization with the ability to hide particular sections
+ Added an option as to whether you would like your wallet balance show in the header of community pages
: Updated the quick sell and instant sell buttons to use the new inventory data layout Valve created
: Updated external site icons with higher resolution versions
: Fixed a bug that caused some "season packs" to incorrectly show a split calculation
: Fixed a bug where metacritic user scores weren't displaying correctly with the new layout

v9.0.1
-----
+ Home page "All New Releases" and "Popular" tabs now use the same visual format of other tabs
: Fixed a few localization errors in the options page
- Removed the home page carousel feature as it is now somewhat redundant with popup flyovers
- Removed the home page customization feature as it was causing some user's browsers to crash