@@ -3145,6 +3145,38 @@ function wishlist_add_to_cart() {
 	});
 }
 
+function wishlist_add_ratings() {
+	var appids = [];
+
+	$('a.btnv6_blue_hoverfade').each(function (index, node) {
+		appids.push(get_appid(node.href));
+	});
+
+	if (appids.length) {
+		get_http('//api.enhancedsteam.com/reviews/?appids=' + appids.join(","), function (data) {
+			var review_data = JSON.parse(data);
+			$.each(review_data, function(appid, scores) {
+				var img_pos = "//store.edgecast.steamstatic.com/public/images/v6/user_reviews_positive.png",
+					img_mix = "//store.edgecast.steamstatic.com/public/images/v6/user_reviews_mixed.png",
+					img_neg = "//store.edgecast.steamstatic.com/public/images/v6/user_reviews_negative.png",
+					img;
+
+				var percent = (Math.floor(100 * (scores["p"] / scores["t"])) / 100).toFixed(2) * 100;
+
+				if (percent >= 70) { img = img_pos; }
+				else if (percent >= 40) { img = img_mix; }
+				else { img = img_neg; }
+
+				var percent_text = percent + "%",
+					total_text = scores["t"].toLocaleString();
+
+				$("#game_" + appid).find(".wishlistRankCtn").append("<div class='es_wishlist_score'><img src='" + img + "' data-community-tooltip='" + localized_strings.review_summary.replace("__percent__", percent_text).replace("__num__", total_text) + "'></div>");
+			});
+			runInPageContext(function() { BindCommunityTooltip( $J('[data-community-tooltip]') ); });
+		});
+	}
+}
+
 // TODO: Cache this data, but only the required entries! Store the data combined in one row
 // but update apps individually based on "release_date.coming_soon". Unreleased apps will be
 // updated at least once a day while others can be updated once a week. If more than three
@@ -9717,6 +9749,7 @@ $(document).ready(function(){
 							add_wishlist_notes();
 							add_wishlist_search();
 							wishlist_add_to_cart();
+							wishlist_add_ratings();
 
 							// Wishlist highlights
 							load_inventory().done(function() {
