@@ -1,5 +1,6 @@
 ﻿v9.2
 -----
++ Added Steam review rating scores to users wishlists
 + Added a confirmation dialog when emptying your shopping cart
 + Add to Cart buttons will now display on larger wishlists
 + Added a "View badge progress" button to booster packs in inventory and on trading cards in market
